--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     {
       "matches": ["http://*/*", "https://*/*"],
       "run_at" : "document_idle",
-      "css": ["/css/foreground_styles.css"],
+      "css": ["/css/content.css"],
       "js": ["/js/content.js"]
     },
     {
