--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "description" : "Korean Initial consonant search Chrome Extension",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["storage", "activeTab", "scripting", "tabs"],
+  "permissions": ["activeTab", "tabs"],
   "host_permissions": ["http://*/*", "https://*/*"],
   "content_scripts": [
     {
@@ -11,16 +11,8 @@
       "run_at" : "document_idle",
       "css": ["/css/content.css"],
       "js": ["/js/content.js"]
-    },
-    {
-      "matches": ["http://*/*", "https://*/*"],
-      "run_at" : "document_start",
-      "js": ["/js/loader.js"]
     }
   ],
-  "background": {
-    "service_worker": "/js/background.js"
-  },
   "icons": {
     "16": "/images/icon16.png",
     "32": "/images/icon32.png",
